# linalg

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md
include/linalg/: dense.hpp  linalg.hpp  linalg_forward_decl.hpp  linalg_traits.hpp  linalg_type_traits.hpp  sparse.hpp
include/linalg/algebra/: algebra.hpp
include/linalg/algebra/expressions/: expression_base.hpp
include/linalg/algebra/expressions/contractions/: .contraction_1_mt.hpp.swo  .dense_dense_matrix_multiplication.hpp.swp  .matrix_vector_multiplication_base.hpp.swp  contraction_1_mt.hpp  contraction_332.hpp  csr_matrix_dense_matrix_multiplication.hpp  csr_matrix_vector_multiplication.hpp  dense_dense_matrix_multiplication.hpp  dense_matrix_vector_multiplication.hpp  diagonal_matrix_dense_matrix_multiplication.hpp  diagonal_matrix_vector_multiplication.hpp  matrix_multiplication_base.hpp  matrix_vector_multiplication_base.hpp  tensor_dot.hpp
include/linalg/algebra/expressions/elemental/: expression.hpp  result_type.hpp  storage_traits.hpp
include/linalg/algebra/expressions/elemental/applicative/: addition_operation.hpp  complex.hpp  complex_conjugation_operation.hpp  exponential_operation.hpp  hadamard.hpp  scalar_multiplication_operation.hpp
include/linalg/algebra/expressions/permutations/: tensor_permutation.hpp  tensor_transpose.hpp  transpose_expression.hpp
include/linalg/algebra/overloads/: .dot_product.hpp.swp  complex.hpp  conjugation.hpp  dot_product.hpp  exponential.hpp  expression_type_aliases.hpp  hadamard.hpp  matrix_matrix_product.hpp  matrix_vector_product.hpp  real_imag.hpp  scalar_multiplication.hpp  tensor_addition.hpp  tensor_contractions.hpp  tensor_permutation.hpp  trace.hpp  transposition.hpp
include/linalg/backends/: blas_backend.hpp  blas_wrapper.hpp  cublas_wrapper.hpp  cuda_backend.hpp  cuda_environment.hpp  cuda_kernels.hpp  cuda_utils.hpp  cusolver_wrapper.hpp  cusparse_wrapper.hpp  extended_blas_functions.hpp  lapack_wrapper.hpp  mkl_wrapper.hpp
include/linalg/decompositions/: decompositions_common.hpp
include/linalg/decompositions/eigensolvers/: .eigensolver_hermitian.hpp.swp  .eigensolver_upper_hessenberg.hpp.swp  eigensolver.hpp  eigensolver_base.hpp  eigensolver_general.hpp  eigensolver_hermitian.hpp  eigensolver_symmetric_tridiagonal.hpp  eigensolver_upper_hessenberg.hpp
include/linalg/decompositions/generalised_eigensolvers/: generalised_eigensolver.hpp  generalised_eigensolver_base.hpp  generalised_eigensolver_general.hpp
include/linalg/decompositions/lu_decomposition/: lu_decomposition.hpp
include/linalg/decompositions/qr/: qr.hpp  qr_base.hpp  qr_blas.hpp
include/linalg/decompositions/singular_value_decomposition/: singular_value_decomposition.hpp  singular_value_decomposition_base.hpp  singular_value_decomposition_blas.hpp  singular_value_decomposition_cuda.hpp
include/linalg/decompositions/sparse/: arnoldi_iteration.hpp  arnoldi_iteration_old.hpp
include/linalg/decompositions/tridiagonalisation/: tridiagonalisation.hpp  tridiagonalisation_base.hpp  tridiagonalisation_hermitian.hpp
include/linalg/special_functions/: determinant.hpp  linear_solver.hpp
include/linalg/tensor/dense/: .tensor.hpp.swo  tensor.hpp  tensor_details.hpp  tensor_slice.hpp  tensor_slice_traits.hpp  tensor_view.hpp
include/linalg/tensor/sparse/: csr_matrix.hpp  diagonal_matrix.hpp  special_matrix_base.hpp  symmetric_tridiagonal_matrix.hpp
include/linalg/utils/: exception_handling.hpp  linalg_utils.hpp  memory_helper.hpp  omp.hpp  serialisation.hpp
